--- a/contact.html
+++ b/contact.html
@@ -1,67 +1,219 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Your Portfolio - Contact Me</title>
-    <!-- Add your CSS and JavaScript links here for styling and animations -->
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-  </head>
-  <body>
-    <header>
-      <h1>SANDRA MARIA JOSE</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="gallery.html">My Gallery</a></li>
-          <li><a href="contact.html">Contact Me</a></li>
-          <li><a href="signup.html">Sign Up</a></li>
-        </ul>
-      </nav>
-    </header>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Portfolio - Contact Me</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> <!-- Add Font Awesome for icons -->
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f7f7f7;
+      color: #333;
+    }
 
-    <main>
-      <section>
-        <h2>Contact Me</h2>
-        <!-- Include a map, contact form, and contact details as needed -->
-        <div id="contact-details">
-          <h3>Contact Details</h3>
-          <p><strong>Email:</strong> sandramariya095@gmail.com</p>
-          <p><strong>Phone:</strong> 9778086228</p>
-          <p><strong>Address:</strong> Thoniplackal,Teekoy</p>
-        </div>
+    header {
+      background-color: #3498db;
+      color: white;
+      text-align: center;
+      padding: 1rem 0;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
 
-        <div id="contact-form">
-          <h3>Contact Form</h3>
-          <form action="submit_contact_form.php" method="post">
-            <label for="name">Your Name:</label>
-            <input type="text" id="name" name="name" required />
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
 
-            <label for="email">Your Email:</label>
-            <input type="email" id="email" name="email" required />
+    nav ul li {
+      display: inline;
+      margin-right: 15px;
+    }
 
-            <label for="message">Your Message:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
+    nav a {
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      font-size: 16px;
+      transition: color 0.3s ease;
+    }
 
-            <button type="submit">Send Message</button>
-          </form>
-        </div>
+    nav a:hover {
+      color: #ecf0f1;
+    }
 
-        <div id="map">
-          <h3>Location</h3>
-          <!-- You can embed a map here using Google Maps or another mapping service. -->
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.6789101112!2d-XX.XXXXXX!3dYY.YYYYYY!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0:0x0!2zMmMwJzIzLjIiTiAXXy0tNjQnMTYuMCJF!5e0!3m2!1sen!2sus!4v1550676012237"
-            frameborder="0"
-            style="border: 0"
-            allowfullscreen
-          ></iframe>
-        </div>
-      </section>
-    </main>
+    main {
+      padding-top: 80px;
+      text-align: center;
+    }
 
-    <footer>
-      <p>&copy; 2023 SANDRA. All rights reserved.</p>
-    </footer>
-  </body>
+    section {
+      background-color: #ecf0f1;
+      padding: 40px 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      margin: 20px;
+      max-width: 800px;
+      margin: auto;
+      animation: fadeIn 1s ease-out;
+    }
+
+    h2, h3 {
+      color: #3498db;
+    }
+
+    #contact-details, #contact-form, #map {
+      margin-bottom: 30px;
+    }
+
+    #contact-details p, #contact-form label {
+      color: #555;
+    }
+
+    #contact-form form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    #contact-form input,
+    #contact-form textarea,
+    #contact-form button {
+      margin: 10px 0;
+      padding: 10px;
+      border: 1px solid #3498db;
+      border-radius: 5px;
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    #contact-form button {
+      background-color: #3498db;
+      color: white;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    #contact-form button:hover {
+      background-color: #2980b9;
+    }
+
+    iframe {
+      width: 100%;
+      height: 300px;
+      border: none;
+      border-radius: 10px;
+    }
+
+    footer {
+      background-color: #3498db;
+      color: white;
+      text-align: center;
+      padding: 1rem 0;
+      position: fixed;
+      width: 100%;
+      bottom: 0;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    footer a {
+      color: white;
+      text-decoration: none;
+      font-size: 20px;
+      transition: color 0.3s ease;
+    }
+
+    footer a:hover {
+      color: #ecf0f1;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+    }
+
+    @media (max-width: 600px) {
+      section {
+        padding: 20px;
+      }
+      iframe {
+        height: 200px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>SANDRA MARIA JOSE</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="gallery.html">My Gallery</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
+        <li><a href="signup.html">Sign Up</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Contact Me</h2>
+      <div id="contact-details">
+        <h3>Contact Details</h3>
+        <p><i class="fas fa-envelope"></i> <strong>Email:</strong> sandramariya095@gmail.com</p>
+        <p><i class="fas fa-phone-alt"></i> <strong>Phone:</strong> 9778086228</p>
+        <p><i class="fas fa-map-marker-alt"></i> <strong>Address:</strong> Thoniplackal, Teekoy</p>
+      </div>
+
+      <div id="contact-form">
+        <h3>Contact Form</h3>
+        <form action="submit_contact_form.php" method="post">
+          <label for="name">Your Name:</label>
+          <input type="text" id="name" name="name" required />
+
+          <label for="email">Your Email:</label>
+          <input type="email" id="email" name="email" required />
+
+          <label for="message">Your Message:</label>
+          <textarea id="message" name="message" rows="4" required></textarea>
+
+          <button type="submit">Send Message</button>
+        </form>
+      </div>
+
+      <div id="map">
+        <h3>Location</h3>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.6789101112!2d-XX.XXXXXX!3dYY.YYYYYY!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0:0x0!2zMmMwJzIzLjIiTiAXXy0tNjQnMTYuMCJF!5e0!3m2!1sen!2sus!4v1550676012237"
+          frameborder="0"
+          style="border: 0"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <p>&copy; 2023 SANDRA. All rights reserved.</p>
+  </footer>
+</body>
 </html>
