--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,116 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Your Portfolio - My Gallery</title>
-    <!-- Add your CSS and JavaScript links here for styling and animations -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Gallery</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <style>
+      body {
+        font-family: 'Arial', sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f8f9fa;
+        color: #343a40;
+      }
+
+      header {
+        background-color: #007bff;
+        color: white;
+        text-align: center;
+        padding: 1rem 0;
+        position: fixed;
+        width: 100%;
+        top: 0;
+        z-index: 1000;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      }
+
+      nav ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+
+      nav ul li {
+        display: inline;
+        margin-right: 15px;
+      }
+
+      nav a {
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+        font-size: 16px;
+        transition: color 0.3s ease;
+      }
+
+      nav a:hover {
+        color: #0056b3;
+      }
+
+      main {
+        padding-top: 80px;
+        text-align: center;
+      }
+
+      section {
+        background-color: white;
+        padding: 40px 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        margin: 20px;
+        max-width: 800px;
+        margin: auto;
+        animation: fadeIn 1s ease-out;
+      }
+
+      h2 {
+        color: #007bff;
+      }
+
+      .photo-gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        gap: 10px;
+        margin-top: 20px;
+      }
+
+      .photo-gallery img {
+        width: 100%;
+        height: auto;
+        border-radius: 8px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        transition: transform 0.3s ease-in-out;
+      }
+
+      .photo-gallery img:hover {
+        transform: scale(1.05);
+      }
+
+      footer {
+        background-color: #007bff;
+        color: white;
+        text-align: center;
+        padding: 1rem 0;
+        position: fixed;
+        width: 100%;
+        bottom: 0;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -24,7 +130,12 @@
       <section>
         <h2>My Gallery</h2>
         <div class="photo-gallery">
-          <img src="san.jpg" alt="Photo 1" />
+          <img src="download (1).jpeg" alt="Photo 1" />
+          <img src="download.jpeg" alt="Photo 2" />
+          <img src="OIP (1).jpeg" alt="Photo 3" />
+          <img src="OIP (2).jpeg" alt="Photo 4" />
+          <img src="OIP.jpeg" alt="Photo 5" />
+          <img src="OIP (1).jpeg" alt="Photo 6" />
         </div>
       </section>
     </main>
