--- a/signup.html
+++ b/signup.html
@@ -1,10 +1,117 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your Portfolio - Sign Up</title>
-    <!-- Add your CSS and JavaScript links here for styling and animations -->
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <style>
+      body {
+        font-family: 'Arial', sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+        color: #333;
+      }
+
+      header {
+        background-color: #3498db;
+        color: white;
+        text-align: center;
+        padding: 1rem 0;
+        position: fixed;
+        width: 100%;
+        top: 0;
+        z-index: 1000;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      }
+
+      nav ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+
+      nav ul li {
+        display: inline;
+        margin-right: 15px;
+      }
+
+      nav a {
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+        font-size: 16px;
+        transition: color 0.3s ease;
+      }
+
+      nav a:hover {
+        color: #ecf0f1;
+      }
+
+      main {
+        padding-top: 80px;
+        text-align: center;
+      }
+
+      section {
+        background-color: white;
+        padding: 40px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        margin: 20px;
+        max-width: 800px;
+        margin: auto;
+        animation: fadeIn 1s ease-out;
+      }
+
+      h2 {
+        color: #3498db;
+      }
+
+      form {
+        display: grid;
+        gap: 15px;
+      }
+
+      label {
+        display: block;
+        margin-bottom: 5px;
+        color: #555;
+      }
+
+      input,
+      select {
+        width: 100%;
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        box-sizing: border-box;
+      }
+
+      button {
+        background-color: #3498db;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+
+      button:hover {
+        background-color: #2980b9;
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -23,9 +130,7 @@
     <main>
       <section>
         <h2>Sign Up</h2>
-        <!-- Create a registration form with at least 15 fields here -->
         <form action="submit_registration_form.php" method="post">
-          <!-- Personal Information -->
           <fieldset>
             <legend>Personal Information</legend>
             <label for="first-name">First Name:</label>
@@ -45,7 +150,6 @@
             </select>
           </fieldset>
 
-          <!-- Contact Information -->
           <fieldset>
             <legend>Contact Information</legend>
             <label for="email">Email:</label>
@@ -70,7 +174,6 @@
             <input type="text" id="country" name="country" required />
           </fieldset>
 
-          <!-- Account Information -->
           <fieldset>
             <legend>Account Information</legend>
             <label for="username">Username:</label>
@@ -104,7 +207,6 @@
             />
           </fieldset>
 
-          <!-- Additional Information -->
           <fieldset>
             <legend>Additional Information</legend>
             <label for="newsletter">Subscribe to Newsletter:</label>
@@ -118,7 +220,9 @@
             <label for="privacy"
               >I agree to the <a href="#">Privacy Policy</a></label
             >
-            <input type="checkbox" id="privacy" name="privacy" required />
+            <input type="checkbox" id="privacy" name="privacy
+
+" required />
           </fieldset>
 
           <button type="submit">Sign Up</button>
